feat: add hal_nordic

--- a/app/west.yml
+++ b/app/west.yml
@@ -9,6 +9,7 @@ manifest:
         name-allowlist:
           - cmsis
           - hal_nxp
+          - hal_nordic
         path-prefix: deps
 
   self:
